# MLOps62

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.txt  Paso 1 - AWS Credentials.md  README.md  Setup.md  artifact_demo.json  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/.dvc/: config
deployment/: Dockerfile  README.md  app.py  requirements.txt  test_api.py
docs/: phase2_Updates_Data_Scientist.md  phase2_report.md
entrega_final/: DELIVERY_CHECKLIST.md  Entrega_Final_Equipo62_MLOps.docx  README.md  docker_commands.txt  generate_final_report.py  project_summary.txt
experiments/: .gitignore  baseline_experiments.py  baseline_results.csv  baseline_results.csv.dvc
models/: best_model_random_forest.pkl  best_model_svr.pkl  feature_names.txt  model_metadata.json
monitoring/: README.md  monitor.py  requirements.txt
notebooks/: 01-aa-ml-canvas.ipynb  02-aa-eda-transformations.ipynb  03-aa-feature-engineering.ipynb  04-aa-model-experiments.ipynb  05-dl-model-experiments.ipynb  07-aa-phase2-pipeline-experiments.ipynb  08-aa-phase2-visualizations.ipynb  1.0-ELT-initial-data-exploration.ipynb  1.0-ERL-Utilidad-DVC-lectura-datasets.ipynb  eda_V1.ipynb  work_absenteeism_clean.csv
reports/: data_scientist_report.md
scripts/: export_best_model.py  publish_data.sh
src/: __init__.py  config.py  data_utils.py  evaluate_v1.py  evaluate_v2.py  features.py  features_engine.py  load_data_v1.py  load_data_v2.py  plots.py  preprocess_data_v1.py  train_v1.py  train_v2.py  wine_refactored_v1.py  wine_refactored_v2.py
src/app/: main.py
(+40 files in other folders)
