[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Absenteeism_Prediction"
version = "0.0.1"
description = "Workforce Absenteeism Prediction using Machine Learning"
authors = [
  { name = "Team62" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["Absenteeism_Prediction"]
include = ["pyproject.toml", "Absenteeism_Prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Absenteeism_Prediction"]
force-sort-within-sections = true

